Edited wiki page CrossPlatform through web user interface.

--- a/wiki/CrossPlatform.wiki
+++ b/wiki/CrossPlatform.wiki
@@ -230,7 +230,7 @@ Network protocols
   * TCP/IP
     * [http://tools.ietf.org/html/rfc791 RFC791] INTERNET PROTOCOL
     * [http://tools.ietf.org/html/rfc1349 RFC1349] Type of Service in the Internet Protocol Suite
-    * [http://tools.ietf.org/html/rfc68w64 RFC] Updated Specification of the IPv4 ID Field
+    * [http://tools.ietf.org/html/rfc6864 RFC6864] Updated Specification of the IPv4 ID Field
     * [http://tools.ietf.org/html/rfc793 RFC793] TRANSMISSION CONTROL PROTOCOL
     * [http://tools.ietf.org/html/rfc3168 RFC3168] The Addition of Explicit Congestion Notification (ECN) to IP
     * [http://tools.ietf.org/html/rfc6093 RFC6093] On the Implementation of the TCP Urgent Mechanism
