--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -7,6 +7,6 @@ the motto basically is "do the right thing now, don't postpone it"
 
 === v0.4 1R00-???? ===
   * refactor of the API
-     * C Standard Library for AS3
-     * RedTamarin Native Library
-     * AVMGlue
+     * *CLIB* C Standard Library for AS3<br>provide implementations of *ISO C / ANSI C* and *POSIX* C libraries to use them in the context of ActionScript 3.0
+     * *RNL* RedTamarin Native Library<br>provides system level libraries: file system, sockets, etc.
+     * *AVMGlue* Flash Platform Glue Library<br>provides implementation of the Flash Platform API (FPAPI, eg. Flash Player and AIR)
