--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -5,14 +5,21 @@ the motto basically is "do the right thing now, don't postpone it"
 
 == v0.4 series ==
 
-=== v0.4 2R00-???? - codename: Ginza ===
-  * implement essential libraries like HTTP, URL, TELNET, FTP, etc.
-  * implement more of AVMGlue: SharedObject reader/writer (.SOL)
+=== v0.4 2R00-???? - codename: Ginza (next) ===
+  * start new libraries programmed in AS3
+    * implement network libraries like HTTP, URL, TELNET, FTP, etc.
+    * implement compression libraries: ZIP, TAR/GZIP, BZ2, LZMA
+    * implement more of AVMGlue: SharedObject reader/writer (.SOL)
+  * adapt *astuce* to the new API
+     * run unit tests on the command line
+     * as a library (ABC)
+     * as a command line tool (EXE)
   * implement a basic event loop
   * implement a headless flash player
+  * review all the encoding to support fully UTF-8 on stdin/stderr/stdout
   * more to come etc.
 
-=== v0.4 1R00-???? - codename: Akihabara ===
+=== v0.4 1R00-???? - codename: Akihabara (active) ===
   * new build system - *done*
      * driven by Ant and cross platform
      * publish clean and complete documentation
@@ -24,7 +31,7 @@ the motto basically is "do the right thing now, don't postpone it"
      * AMF serialisation
      * Workers
      * etc.
-  * refactor of the API - *in the work*
+  * refactor all the API - *in the work*
      * *CLIB* C Standard Library for AS3<br>provide implementations of *ISO C / ANSI C* and *POSIX* C libraries<br>to use them in the context of !ActionScript 3.0
      * *RNL* !RedTamarin Native Library<br>provides system level libraries: file system, sockets, databases, etc.<br>not 100% will be implemented, we focus mainly on socket and file system
      * *AVMGlue* Flash Platform Glue Library<br>provides implementation of the Flash Platform API (FPAPI, eg. Flash Player and AIR)<br>not 100% will be implemented for this release but at least mock/fake class will be available with API versioning
@@ -32,4 +39,4 @@ the motto basically is "do the right thing now, don't postpone it"
      * !RedTamarin SDK<br>install all the tools, define environment variables, documentations, etc.
      * redshell<br>our runtime based on avmshell<br>embed all the API: CLIB, RNL and AVMGlue<br> can run AS3 file, ABC file, SWF file
      * redbean<br>make tool using AS3 syntax<br>compiler tool reusing asc.jar, asc2.jar, etc.<br>produce ABC file, SWF file, EXE file
-     * as3distro<br>package management util<br>allow to distribute libraries as: ABC, SWC, EXE
+     * as3distro<br>package management util<br>allow to distribute and install libraries as: AS, ABC, SWC, EXE
