Edited wiki page Roadmap through web user interface.

--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -14,6 +14,7 @@ the motto basically is "do the right thing now, don't postpone it"
      * run unit tests on the command line
      * as a library (ABC)
      * as a command line tool (EXE)
+     * start to write unit tests for all those libraries
   * implement a basic event loop
   * implement a headless flash player
   * review all the encoding to support fully UTF-8 on stdin/stderr/stdout
