Edited wiki page TOC through web user interface.

--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -56,6 +56,60 @@
       * [TutorialsVideo Video Tutorials]
     * [FAQ FAQ]
   * Old Stuff
+
+    * [Main ↑ Home]
+    * [Users Working with redtamarin]
+      * [GettingStarted Getting Started]
+        * [GettingStarted_0_2_5 Getting Started 0.2.5]
+        * [IDE HOWTO Setup your IDE]
+        * [GettingStartedInShinyColor More Details, Shiny Color and Screenshots]
+        * [GettingStartedAvmglue use avmglue]
+        * [GettingStartedABClibraries create your own abc libraries]
+        * [GettingStartedProject a project based on redtamarin]
+      * [RunningApplications Running Applications]
+        * [RunningShellScripts Shell Scripts]
+    * [Coders Programming redtamarin]
+      * [Organization Organization]
+      * [Code101 Get the code]
+      * [NativeClasses HOWTO work with Native Classes]
       * [Build_old HOWTO Build]
       * [CrossPlatform_old Cross Platform]
       * [Roadmap_old Roadmap]
+      * misc. notes
+         * [TamarinNotes notes about Tamarin]
+         * [CrossPlatformNotes notes about cross-platform C/C++]
+    * [API_old API reference]
+      * [VMPI VMPI]
+      * [StandardC Standard C]
+         * [about_clib about C libraries]
+         * [C_stdlib stdlib]
+         * [C_unistd unistd]
+         * [C_string string]
+         * [C_errno errno]
+         * [C_stdio stdio]
+         * [C_socket socket]
+      * [TopLevel TopLevel]
+      * [AVMPlus AVMPlus]
+         * [System System]
+         * [OperatingSystem Operating System]
+         * [FileSystem File System]
+         * [Socket Socket]
+         * [StandardStream Standard Stream]
+         * profiles
+           * [Profile Profile]
+      * [FlashPlatform Flash Platform]
+    * Documentation
+      * [Tamarin Tamarin]
+      * [ASC ActionScript Compiler] (ASC)
+      * [ASC2 ActionScript Compiler 2] (ASC2)
+      * [ABC ActionScript Byte Code] (ABC)
+      * [asdoc asdoc]
+      * [SWC SWC]
+      * [Projector Projector]
+      * [Security Security]
+      * [SocketDetails Socket details]
+      * [Examples Examples]
+         * [Examples_Socket Socket programming]
+      * [Tutorials Tutorials]
+        * [TutorialsVideo Video Tutorials]
+      * [FAQ FAQ]
