--- a/wiki/Coders.wiki
+++ b/wiki/Coders.wiki
@@ -1,67 +1,3 @@
 #summary Programming redtamarin.
 
-everything you need to know to compile, setup, etc.
-
-You will probably need to [http://code.google.com/p/maashaack/wiki/Tools Set up your development environment] before being able to compile ASC, Tamarin, etc.
-
-
-Here some additions for compiling C/C++
-
-=== Windows ===
-
-You need to install *Microsoft Visual C++ 2008 Express Edition*<br>
-[http://www.microsoft.com/express/download/default.aspx]
-
-It will also compile with *Microsoft Visual C++ 2010 Express Edition*<br>
-but the Tamarin team support only issues with the 2008 version.
-
-
-note:<br>
-have a hotmail/msn account ready<br>
-open VC++ and click help/register (use IE, chrome or firefox does not work)
-
-You need to install Mozilla Build [http://ftp.mozilla.org/pub/mozilla.org/mozilla/libraries/win32/MozillaBuildSetup-1.4.exe MozillaBuildSetup-1.4]<br>
-and add `C:\mozilla-build\msys\bin` to your environment variables<br>
-see [https://developer.mozilla.org/En/Developer_Guide/Build_Instructions/Windows_Prerequisites#MozillaBuild]
-
-Configure cygwin bash to run VS C++ on the command line
-
-open your .bash_profile and add
-{{{
-# NOTE: The INCLUDE, LIB and LIBPATH must contain windows path information and separator and not cygwin paths.
-VS_HOME_PATH="/c/Program Files/Microsoft Visual Studio 9.0"
-VS_HOME="c:\Program Files\Microsoft Visual Studio 9.0"
-
-export PATH="$VS_HOME_PATH/Common7/IDE:$VS_HOME_PATH/VC/bin:$VS_HOME_PATH/Common7/Tools:$VS_HOME_PATH/VC/VCPackages:$PATH"
-export INCLUDE="$VS_HOME\VC\atlmfc\include;$VS_HOME\VC\include;C:\Program Files\Microsoft SDKs\Windows\v6.0A\Include;"
-export LIB="$VS_HOME\VC\atlmfc\lib;$VS_HOME\VC\lib;C:\Program Files\Microsoft SDKs\Windows\v6.0A\Lib"
-export LIBPATH="$VS_HOME\VC\atlmfc\lib;$VS_HOME\VC\lib;C:\Program Files\Microsoft SDKs\Windows\v6.0A\Lib"
-}}}
-
-misc:<br>
-if you have limited RAM the build could end up with a fatal error, be sure to have at least 2GB of RAM (eg. for a VM setup).
-
-
-=== OS X ===
-
-You need to install the Developer Tools (the 2nd install DVD) or you can download them here [http://developer.apple.com/technologies/tools/]<br>
-this will install Xcode, make, etc.
-
-=== Linux ===
-(I'm testing on Ubuntu 8.04 so if you have another flavour adapt accordingly)
-
-You need to install *build-essential*
-{{{
-$ sudo apt-get install build-essential
-}}}
-(strangely this basic thing can be a stopper for more than one)
-
-after that all should go smooth.
-
-If `build.xml` or `release.xml` encounter a "Script not found" with Ant,<br>
-get your Ant version, then [http://ant.apache.org/bindownload.cgi download] the same version,<br>
-an copy all the jars from `/lib` to `/usr/share/ant/lib`.
-
-For ex, with Ubuntu 8.04, I had by default Ant 1.7.0,<br>
-from the [http://archive.apache.org/dist/ant/binaries/ old Ant releases] I downloaded `apache-ant-1.7.0-bin.zip`<br>
-and then (after extraction) `$sudo cp apache-ant-1.7.0-bin/lib/*.jar /usr/share/lib/`.
+TODO
