Edited wiki page TOC through web user interface.

--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -16,29 +16,14 @@
     * [NativeClasses HOWTO work with Native Classes]
     * [Build HOWTO Build]
     * [CrossPlatform Cross Platform]
-    * [Roadmap Roadmap]
-    * misc. notes
+      * [VMPI VMPI]
        * [TamarinNotes notes about Tamarin]
        * [CrossPlatformNotes notes about cross-platform C/C++]
+    * [Roadmap Roadmap]
   * [API API reference]
-    * [VMPI VMPI]
-    * [StandardC Standard C]
-       * [about_clib about C libraries]
-       * [C_stdlib stdlib]
-       * [C_unistd unistd]
-       * [C_string string]
-       * [C_errno errno]
-       * [C_stdio stdio]
-       * [C_socket socket]
-    * [TopLevel TopLevel]
-    * [AVMPlus AVMPlus]
-       * [System System]
-       * [OperatingSystem Operating System]
-       * [FileSystem File System]
-       * [Socket Socket]
-       * [StandardStream Standard Stream]
-       * profiles
-         * [Profile Profile]
+    * [CLIB The C Standard Library for AS3]
+    * [RNL The !RedTamarin Native Library]
+    * [AVMGlue The AVMGlue Library]
     * [FlashPlatform Flash Platform]
   * Documentation
     * [Tamarin Tamarin]
@@ -57,7 +42,7 @@
     * [FAQ FAQ]
   * Old Stuff
     * [Main_old ↑ Home]
-    * [Users Working with redtamarin]
+    * [Users_old Working with redtamarin]
       * [GettingStarted Getting Started]
         * [GettingStarted_0_2_5 Getting Started 0.2.5]
         * [IDE HOWTO Setup your IDE]
@@ -67,7 +52,7 @@
         * [GettingStartedProject a project based on redtamarin]
       * [RunningApplications Running Applications]
         * [RunningShellScripts Shell Scripts]
-    * [Coders Programming redtamarin]
+    * [Coders_old Programming redtamarin]
       * [Organization Organization]
       * [Code101 Get the code]
       * [NativeClasses HOWTO work with Native Classes]
